Enable ErrorProne on wala.util project (#248)
* remove import